--- a/OpenBioC/app/templates/app/index.html
+++ b/OpenBioC/app/templates/app/index.html
@@ -9,16 +9,95 @@
 		window.general_success_message = {% autoescape off %}"{{ general_success_message }}"{% endautoescape %}; 
 		window.password_reset_token = "{{ password_reset_token }}";
 	</script>
-	<script defer src="/static/app/jquery-3.3.1.min.js"></script>
+
+	<script src="/static/app/jquery-3.3.1.min.js"></script>
+	<!--
+	<script src="/static/app/jquery-2.1.1/jquery-2.1.1.min.js"></script>
+	-->
+
+
+	<!-- FOR DRAGGABLE
+	<script src="/static/app/jquery-ui-1.12.1.custom/jquery-ui.min.js" type="text/javascript" charset="utf-8"></script>
+	<link rel="stylesheet" href="/static/app/jquery-ui-1.12.1.custom/jquery-ui.min.css" type="text/css"/>
+	-->
+
+	<!-- 
+	<link rel="stylesheet" href="/static/app/jQuery-contextMenu-2.7.0/dist/jquery.contextMenu.min.css" type="text/css"/>
+	<script src="/static/app/jQuery-contextMenu-2.7.0/dist/jquery.contextMenu.min.js" type="text/javascript" charset="utf-8"></script>
+	-->
+
+	<!-- This is version 4.0 -->
 	<link rel="stylesheet" href="/static/app/css/bootstrap.min.css" type="text/css"/>
 	<script defer src="/static/app/js/bootstrap.min.js"></script>
+
+	
+
+	<!--
+	<link rel="stylesheet" href="/static/app/bootstrap-3.3.7/dist/css/bootstrap.min.css" type="text/css"/>
+	<script defer src="/static/app/bootstrap-3.3.7/dist/js/bootstrap.min.js"></script>
+	-->
+
+	<!-- For Glyphicons -->
+	<link rel="stylesheet" href="/static/app/fontawesome/font-awesome-4.7.0/css/font-awesome.min.css" type="text/css"/>
+
+	<!-- This is version 1.7.2 -->
 	<script src="/static/app/angular.min.js"></script>
+	
+
+	<!--
+	<script src="/static/app/angular.1.3.2/angular.min.js"></script>
+	-->
+
+	<!-- 1.7.2 unminified 
+	<script src="/static/app/angular.js"></script>
+	-->
+
+	<!--
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/themes/default/style.min.css" />
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/jstree.min.js"></script>
+	-->
+
+	
+	<link rel="stylesheet" href="/static/app/jstree-3.3.5/dist/themes/default/style.min.css" type="text/css"/>
+	<script src="/static/app/jstree-3.3.5/dist/jstree.min.js"></script>
+	
+
+	<!--
+	<link rel="stylesheet" href="/static/app/jstree-3.2.1/dist/themes/default-dark/style.min.css" type="text/css"/>
+	<script src="/static/app/jstree-3.2.1/dist/jstree.min.js"></script>
+	-->
+
+	<!--
+	<link rel="stylesheet" href="/static/app/jstree-3.0.8/dist/themes/default-dark/style.min.css" type="text/css"/>
+	<script src="/static/app/jstree-3.0.8/dist/jstree.min.js"></script>
+	-->
+
+	<script src="/static/app/ngJsTree-0.0.10/dist/ngJsTree.min.js"></script>
+	
+	<!--
+	<script src="/static/app/ngJsTree-0.0.10/dist/ngJsTree.js"></script>
+	-->
+
+
+	<!--
+	<link rel="stylesheet" href="/static/app/angular-ui-tree-2.22.6/dist/angular-ui-tree.min.css">
+	<script type="text/javascript" src="/static/app/angular-ui-tree-2.22.6/dist/angular-ui-tree.min.js"></script>
+	-->
+
+	<!--
+	<script type="text/javascript" src="/static/app/angular-tree-control-0.2.28/angular-tree-control.js"></script>
+	<link rel="stylesheet" type="text/css" href="/static/app/angular-tree-control-0.2.28/css/tree-control.css">
+	-->
+
+	
 	<link rel="stylesheet" href="/static/app/OBC.css" type="text/css"/>
 	<script src="/static/app/ace-builds-1.4.1/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
+
+
 </head>
 <body>
 
-<div ng-app="OBC_app" ng-controller="OBC_ctrl" ng-init="init()">
+<div id="angular_div" ng-app="OBC_app" ng-controller="OBC_ctrl" ng-init="init()">
 {% include "app/navbar.html" %}
 {# include "app/navbar_default.html" #}
 
@@ -53,6 +132,83 @@
 <div class="container" ng-show="show_tools">
 {% include "app/tools.html" %}
 </div>
+
+<div class="container">
+	<div class="row">
+		<div class="col-xs-6">
+			<div class="panel panel-default">
+				<div class="panel-heading">Js Tree 1</div>
+				<div class="panel-body">
+					<div js-tree="treeConfig" should-apply="applyModelChanges()" ng-model="treeData" tree="treeInstance" tree-events="ready:readyCB;create_node:createCB"></div>
+					<button ng-click="addNewNode()">Press me</button>
+				</div>
+			</div>
+		</div>
+		<div class="col-xs-6">
+			<div class="panel panel-default">
+				<div class="panel-heading">Js Tree 2</div>
+				<div class="panel-body">
+					<div js-tree="treeConfig" should-apply="applyModelChanges()" ng-model="treeData_2" tree="treeInstance_2" tree-events="ready:readyCB;create_node:createCB"></div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<!--
+{% verbatim %}
+<div style="background-color: #555;">
+     <treecontrol class="tree-dark" tree-model="treedata" on-selection="showSelected(node)">
+         <span ng-switch="" on="node.type">
+             <span ng-switch-when="folder" class="glyphicon glyphicon-folder-open" aria-hidden="true"></span>
+             <span ng-switch-when="pic" class="glyphicon glyphicon-picture" aria-hidden="true"></span>
+             <span ng-switch-when="doc" class="glyphicon glyphicon-file" aria-hidden="true"></span>
+             <span ng-switch-when="file" class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
+             <span ng-switch-when="movie" class="glyphicon glyphicon-film" aria-hidden="true"></span>
+             <span ng-switch-when="email" class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
+             <span ng-switch-when="home" class="glyphicon glyphicon-home" aria-hidden="true"></span>
+             <span ng-switch-when="trash" class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+         </span> 
+         <span class="glyphicon glyphicon-music" aria-hidden="true"></span> label: {{node.label}}
+     </treecontrol>
+ </div>
+{% endverbatim %}
+-->
+
+<!--
+{% verbatim %}
+<treecontrol class="tree-classic"
+   tree-model="dataForTheTree"
+   options="treeOptions"
+   on-selection="showSelected(node)"
+   selected-node="node1">
+   <div draggable="true" ondragstart="drag(event)">
+   employee: {{node.name}} age {{node.age}}
+</div>
+</treecontrol>
+{% endverbatim %}
+-->
+
+<!--
+{% verbatim %}
+<div ui-tree>
+  <ol ui-tree-nodes="" ng-model="list">
+    <li ng-repeat="item in list" ui-tree-node>
+      <div ui-tree-handle>
+        {{item.title}} <span ng-click="toggle(this)">Alekos</span>
+      </div>
+      <ol ui-tree-nodes="" ng-model="item.items">
+        <li ng-repeat="subItem in item.items" ui-tree-node>
+          <div ui-tree-handle>
+            {{subItem.title}}
+          </div>
+        </li>
+      </ol>
+    </li>
+  </ol>
+</div>
+{% endverbatim %}
+-->
 
 </div> <!-- angular controler -->
 
