search jstree logic

--- a/OpenBioC/app/static/app/OBC.css
+++ b/OpenBioC/app/static/app/OBC.css
@@ -60,4 +60,9 @@ pre {
     white-space: pre-wrap;
 }
 
-
+#tools_dep_jstree_id {
+/*    border-style: double;
+    border-width: medium;*/
+    border: 1px solid red;
+    height: 200px;  
+}
