--- a/OpenBioC/app/templates/app/tools.html
+++ b/OpenBioC/app/templates/app/tools.html
@@ -139,7 +139,7 @@ An idea for angular trees: https://angular-ui-tree.github.io/angular-ui-tree/#/b
                             </div>
                         </div>
                         <div class="tab-pane fade" id="pills-tool-2" role="tabpanel" aria-labelledby="pills-tool-2-tab">
-                            <div class="row">
+                            <div class="row" ng-show="tools_info_editable">
                                 <div class="col-md-12">
                                     <strong>Drop here a tool from the search tree, to add it as a dependency</strong>
                                 </div>
