server side for variable jstree

--- a/OpenBioC/app/templates/app/tools.html
+++ b/OpenBioC/app/templates/app/tools.html
@@ -155,6 +155,13 @@ An idea for angular trees: https://angular-ui-tree.github.io/angular-ui-tree/#/b
                                 <div class="col-md-12">
                                     <form>
                                       <div class="form-group row">
+                                        <label for="no12" class="col-2 col-form-label">&nbsp;&nbsp;</label>
+                                        <div class="col-10">
+                                            <strong><a href >Show variables from dependent tools</a></strong>
+                                            <div id="tools_var_jstree_id" js-tree="tools_var_jstree_config" should-apply="tools_search_jstree_config_apply()" ng-model="tools_var_jstree_model" tree="tools_var_jstree"></div>
+                                        </div>
+                                      </div>
+                                      <div class="form-group row">
                                         <label for="tool_installation_editor" class="col-2 col-form-label">Installation Commands</label>
                                         <div class="col-10">
                                             <div id="tool_installation_editor"></div>
