--- a/OpenBioC/app/templates/app/tools.html
+++ b/OpenBioC/app/templates/app/tools.html
@@ -37,7 +37,7 @@ An idea for angular trees: https://angular-ui-tree.github.io/angular-ui-tree/#/b
                 <div js-tree="tools_search_jstree_config" should-apply="tools_search_jstree_config_apply()" ng-model="tools_search_jstree_model" tree="tools_search_jstree" tree-events="select_node:tools_search_jstree_select_node"></div>
             </div>
         </div>
-        <div class="row" ng-show="(!tools_search_warning) && tools_search_name && tools_search_version">
+        <div class="row" ng-show="(!tools_search_warning) && tools_search_name && tools_search_version && tools_search_tools_number===0">
             <div class="col-md-4 offset-md-4">
                 <button class="btn btn-success" ng-click="toools_search_create_new_pressed()" ng-class="{'disabled': !username}">Create New</button> <!-- btn-lg -->
             </div>
