Fix: right icon when moving JSTREE nodes

--- a/OpenBioC/app/static/app/OBC.css
+++ b/OpenBioC/app/static/app/OBC.css
@@ -66,3 +66,9 @@ pre {
     border: 1px solid red;
     height: 200px;  
 }
+
+/* https://stackoverflow.com/questions/34644442/jstree-drag-drop-icon-not-showing-while-moving 
+#vakata-dnd {
+    background: #000;
+}
+*/
