--- a/OpenBioC/app/templates/app/navbar.html
+++ b/OpenBioC/app/templates/app/navbar.html
@@ -15,8 +15,11 @@ https://stackoverflow.com/a/20362024/5626738
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class="nav-item" ng-class="{active: show_tools}">
         <a href class="nav-link" ng-click="navbar_tools_pressed()">Tools/Data <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item" ng-class="{active: show_workflows}">
+        <a href class="nav-link" ng-click="navbar_workflows_pressed()">Workflows <span class="sr-only">(current)</span></a>
       </li>
     </ul>
   </div>
