simple example of cola graph

--- a/OpenBioC/app/static/app/OBC.css
+++ b/OpenBioC/app/static/app/OBC.css
@@ -84,3 +84,19 @@ pre {
     background: #000;
 }
 */
+
+/* D3 / WebCola */
+.node {
+  stroke: #fff;
+  stroke-width: 1.5px;
+}
+
+.link {
+  stroke: #999;
+  stroke-opacity: .8;
+}
+
+
+
+
+
