--- a/OpenBioC/app/static/app/OBC.css
+++ b/OpenBioC/app/static/app/OBC.css
@@ -86,14 +86,32 @@ pre {
 */
 
 /* D3 / WebCola */
+
 .node {
   stroke: #fff;
   stroke-width: 1.5px;
+  cursor: move;
+}
+
+.group {
+  stroke: #fff;
+  stroke-width: 1.5px;
+  cursor: move;
+  opacity: 0.7;
 }
 
 .link {
-  stroke: #999;
-  stroke-opacity: .8;
+  stroke: #7a4e4e;
+  stroke-width: 3px;
+  stroke-opacity: 1;
+}
+
+.label {
+    fill: white;
+    font-family: Verdana;
+    font-size: 25px;
+    text-anchor: middle;
+    cursor: move;
 }
 
 
