--- a/OpenBioC/app/templates/app/signup.html
+++ b/OpenBioC/app/templates/app/signup.html
@@ -21,7 +21,7 @@ Style taken from here: https://www.codeply.com/go/nhbdi2FkJm/bootstrap-4-login-f
 			    <h3 class="mb-0">Sign-up</h3>			    
 			</div>
 			<div class="card-body">
-			    <form class="form" role="form" autocomplete="off" id="loginForm" novalidate="">
+			    <form class="form" role="form" autocomplete="off" id="signupForm" novalidate="">
 			        <div class="form-group">
 			            <label for="uname1">Username</label>
 			            <input type="text" class="form-control" name="uname1" id="signup_username" required="" ng-model="signup_username">
@@ -34,12 +34,12 @@ Style taken from here: https://www.codeply.com/go/nhbdi2FkJm/bootstrap-4-login-f
 			        </div>
 			        <div class="form-group">
 			            <label>Confirm Password</label>
-			            <input type="password" class="form-control" id="pwd1" required="" ng-model="signup_confirm_password">
+			            <input type="password" class="form-control" id="confirm_password" required="" ng-model="signup_confirm_password">
 			            <div class="invalid-feedback">Confirm password</div>
 			        </div>
 			        <div class="form-group">
 			            <label>Email</label>
-			            <input type="text" class="form-control" id="pwd1" required="" ng-model="signup_email">
+			            <input type="text" class="form-control" id="signup_email" required="" ng-model="signup_email">
 			            <div class="invalid-feedback">Enter your email</div>
 			        </div>
 
