--- a/OpenBioC/app/static/app/OBC.css
+++ b/OpenBioC/app/static/app/OBC.css
@@ -101,17 +101,19 @@ pre {
 }
 
 .link {
-  stroke: #7a4e4e;
-  stroke-width: 3px;
-  stroke-opacity: 1;
+  fill: none;
+  stroke: #000;
+  stroke-width: 1.5px;
+  opacity: 1;
+  marker-end: url(#end-arrow);
+   
 }
 
 .label {
-    /*fill: white;*/
-    fill: pink;
+    fill: black;
     font-family: Verdana;
-    font-size: 25px;
-    text-anchor: middle;
+    font-size: 18px;
+    text-anchor: start;
     cursor: move;
 }
 
