added 3 buttons clear, save, fit

--- a/OpenBioC/app/templates/app/tools.html
+++ b/OpenBioC/app/templates/app/tools.html
@@ -292,6 +292,13 @@ An idea for angular trees: https://angular-ui-tree.github.io/angular-ui-tree/#/b
                         </small>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <button class="btn btn-outline-dark float-right">Save</button>
+                        <button class="btn btn-outline-dark float-right">Clear</button>
+                        <button class="btn btn-outline-dark float-right">Fit</button>
+                    </div>
+                </div>
                 <hr>
                 <div class="row">
                         <div class="col-md-12">
