wf clear button connect with ui

--- a/OpenBioC/app/templates/app/tools.html
+++ b/OpenBioC/app/templates/app/tools.html
@@ -295,7 +295,7 @@ An idea for angular trees: https://angular-ui-tree.github.io/angular-ui-tree/#/b
                 <div class="row">
                     <div class="col-md-12">
                         <button class="btn btn-outline-dark float-right">Save</button>
-                        <button class="btn btn-outline-dark float-right">Clear</button>
+                        <button class="btn btn-outline-dark float-right" ng-click="workflow_clear_button_pressed()">Clear</button>
                         <button class="btn btn-outline-dark float-right">Fit</button>
                     </div>
                 </div>
