--- a/OpenBioC/app/templates/app/index.html
+++ b/OpenBioC/app/templates/app/index.html
@@ -177,5 +177,7 @@ LOGO FOOTER
 <script src="/static/app/OBC_ctrl.js"></script>
 <script src="/static/app/OBC.js" type="text/javascript" charset="utf-8"></script>
 </body>
+<!-- konstanina comment -->
+
 </html>
 
