--- a/OpenBioC/app/templates/app/navbar2.html
+++ b/OpenBioC/app/templates/app/navbar2.html
@@ -1,19 +1,18 @@
 <!-- --------------------------------------------------------------------------------------- -->
 <!-- ------------------------------------- Navbar ------------------------------------------ -->
 <!-- --------------------------------------------------------------------------------------- -->
-<div class="navbar">
+<div class="navbar" id="navbar">
     <nav>
         <div class="nav-wrapper blue-grey lighten-4 ">
             <a href="#!" class="brand-logo left black-text">OpenBio</a>
-            <a id="navMenuBtn" href="#" data-target="mobile-nav" class="sidenav-trigger right black-text" style="display:none"><i
-                    class="material-icons">menu</i></a>
+            <a id="navMenuBtn" href="#" data-target="mobile-nav" class="sidenav-trigger right black-text"><i class="material-icons">menu</i></a>
             <!-- Navbar Content -->
-            <ul id="main-nav" class="right">
+            <ul id="main-nav" class="right hide-on-med-and-down">
                 <li><a class="black-text" href="#">Home</a></li>
                 <li><a id="signInBtn" href="#signModal" class="modal-trigger black-text">Sign in</a></li>
                 <li>
                     <a class="dropdown-trigger valign-wrapper black-text" href="#" data-target="profile">
-                        <img src="img/img_avatar.png" class="circle responsive-img imgAvatar" alt="Avatar">
+                        <img class="circle responsive-img imgAvatar" alt="Avatar">
                         Username<i class="material-icons right">arrow_drop_down</i>
                     </a>
                 </li>
