--- a/OpenBioC/app/templates/app/index.html
+++ b/OpenBioC/app/templates/app/index.html
@@ -15,6 +15,9 @@
 	<script src="/static/app/jquery-2.1.1/jquery-2.1.1.min.js"></script>
 	-->
 
+	<!-- Kontstantina CSS -->
+	<link rel="stylesheet" href="/static/app/konstantina/css/style.css" type="text/css"/>
+	
 
 	<!-- FOR DRAGGABLE
 	<script src="/static/app/jquery-ui-1.12.1.custom/jquery-ui.min.js" type="text/javascript" charset="utf-8"></script>
@@ -27,8 +30,10 @@
 	-->
 
 	<!-- This is version 4.0 -->
+	<!--
 	<link rel="stylesheet" href="/static/app/css/bootstrap.min.css" type="text/css"/>
 	<script defer src="/static/app/js/bootstrap.min.js"></script>
+	-->
 
 	
 
@@ -43,7 +48,7 @@
 	<!-- This is version 1.7.2 -->
 	<script src="/static/app/angular.min.js"></script>
 	
-	<!-- For Select-->
+	<!-- For Select Perhaps we never use it!-->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/3.4.5/select2.css">    
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.8.5/css/selectize.default.css">
 	<script src='/static/app/bower-angular-sanitize-1.7.2/angular-sanitize.min.js'></script>
