--- a/OpenBioC/app/templates/app/navbar2.html
+++ b/OpenBioC/app/templates/app/navbar2.html
@@ -10,10 +10,10 @@
             <ul id="main-nav" class="right hide-on-med-and-down">
                 <li><a class="black-text" href="#">Home</a></li>
                 <li><a id="signInBtn" href="#signModal" class="modal-trigger black-text">Sign in</a></li>
-                <li>
+                <li ng-show="username">
                     <a class="dropdown-trigger valign-wrapper black-text" href="#" data-target="profile">
                         <img class="circle responsive-img imgAvatar" alt="Avatar">
-                        Username<i class="material-icons right">arrow_drop_down</i>
+                        <span ng-bind="username"></span><i class="material-icons right">arrow_drop_down</i>
                     </a>
                 </li>
             </ul>
@@ -24,7 +24,7 @@
                 <li><a href="#!"><i class="material-icons">notifications</i>Notifications</a></li>
                 <li><a href="#!"><i class="material-icons">settings</i>Settings</a></li>
                 <li class="divider"></li>
-                <li><a href="#!"><i class="material-icons">exit_to_app</i>Logout</a></li>
+                <li><a href="logout/"><i class="material-icons">exit_to_app</i>Logout</a></li>
             </ul>
             <!-- Sidenav Content -->
             <ul class="sidenav" id="mobile-nav">
@@ -35,7 +35,7 @@
                 <li><a href="#!">Inbox</a></li>
                 <li><a href="#!">Notifications</a></li>
                 <li><a href="#!">Settings</a></li>
-                <li><a href="#!">Logout</a></li>
+                <li><a href="logout/">Logout</a></li>
             </ul>
         </div>
     </nav>
@@ -53,13 +53,14 @@
                 <h4>Sign In</h4>
             </div>
             <form>
+                <div ng-show="login_error_message"><span ng-bind="login_error_message"></span></div>
                 <div class="row col s12">
                     <div class="input-field col s12">
-                        <input id="signInUsername" type="text" class="validate">
+                        <input id="signInUsername" type="text" class="validate" ng-model="login_username">
                         <label for="signInUsername">Username</label>
                     </div>
                     <div class="input-field col s12">
-                        <input id="signInPassword" type="password" class="validate">
+                        <input id="signInPassword" type="password" class="validate" ng-model="login_password">
                         <label for="signInPassword">Password</label>
                     </div>
                     <p>
@@ -70,7 +71,7 @@
                     </p>
                 </div>
                 <div class="row col s12">
-                    <button class="btn modal-close waves-effect waves-light" type="submit" name="action">Sign in</button>
+                    <button class="btn waves-effect waves-light" type="submit" name="action" ng-click="login_login_pressed()">Sign in</button> <!-- modal-close-->
                     <p>
                         <small class="form-text text-muted">
                             <a href="#">Forgot Password?</a>
