--- a/OpenBioC/app/templates/app/navbar2.html
+++ b/OpenBioC/app/templates/app/navbar2.html
@@ -9,7 +9,7 @@
             <!-- Navbar Content -->
             <ul id="main-nav" class="right hide-on-med-and-down">
                 <li><a class="black-text" href="#">Home</a></li>
-                <li><a id="signInBtn" href="#signModal" class="modal-trigger black-text">Sign in</a></li>
+                <li ng-show="!username"><a id="signInBtn" href="#signModal" class="modal-trigger black-text">Sign in</a></li>
                 <li ng-show="username">
                     <a class="dropdown-trigger valign-wrapper black-text" href="#" data-target="profile">
                         <img class="circle responsive-img imgAvatar" alt="Avatar">
@@ -53,7 +53,11 @@
                 <h4>Sign In</h4>
             </div>
             <form>
-                <div ng-show="login_error_message"><span ng-bind="login_error_message"></span></div>
+                <div class="row col s12" ng-show="login_error_message">
+                    <div class="card-panel red lighten-1 center-align" style="padding:10px">
+                        <span class="white-text" ng-bind="login_error_message"></span>
+                    </div>
+                </div>
                 <div class="row col s12">
                     <div class="input-field col s12">
                         <input id="signInUsername" type="text" class="validate" ng-model="login_username">
@@ -71,13 +75,14 @@
                     </p>
                 </div>
                 <div class="row col s12">
-                    <button class="btn waves-effect waves-light" type="submit" name="action" ng-click="login_login_pressed()">Sign in</button> <!-- modal-close-->
+                    <button class="btn waves-effect waves-light" type="submit" name="action" ng-click="login_login_pressed()">Sign
+                        in</button> <!-- modal-close-->
                     <p>
                         <small class="form-text text-muted">
                             <a href="#">Forgot Password?</a>
                         </small>
                     </p>
-                    <p class="center-align">New user? <a href="#" id="signUpBtn">Sign up</a></p>
+                    <p class="center-align">New user? <a href="#" id="modalSignUpBtn">Sign up</a></p>
                 </div>
             </form>
         </div>
@@ -116,7 +121,7 @@
                             have read our <a href="#">Data Use Policy</a>, including our <a href="#">Cookie Use</a>
                         </small>
                     </p>
-                    <p class="center-align">Already a member? <a href="#" id="signInBtn">Sign in</a></p>
+                    <p class="center-align">Already a member? <a href="#" id="modalSignInBtn">Sign in</a></p>
                 </div>
             </form>
         </div>
